--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
     <section class="second-part">
         <div class="second-container">
             <div class="menu">
-                <button>Upcomming Match</button>
+                <button><a href="secondpage.html" target="_blank">Upcomming Match</a></button>
                 <button>All Group</button>
                 <button class="selected">Blog</button>
             </div>
+            <!-- Blog section -->
             <div class="blogs">
                 <div class="blog">
                     <div class="blog-banner">
@@ -122,6 +123,14 @@
             </div>
         </div>
     </section>
+
+    <!-- View All Button -->
+    <div class="view-button">
+        <button><a href=""> View All</a></button>
+
+    </div>
+    <!-- footer section -->
+
     <footer>
         <div class="footer-info">
             <h1 class="footer-title">Goal</h1>
@@ -136,6 +145,14 @@
                 <li><a href="">Privacy Settings</a></li>
                 <li><a href="">Goal App</a></li>
                 <li><a href="">Goal Live</a></li>
+            </ul>
+        </div>
+        <div class="footer-social">
+            <ul>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
         </div>
     </footer>
