--- a/secondpage.html
+++ b/secondpage.html
@@ -38,8 +38,9 @@
             <div class="menu">
                 <button class="selected">Upcomming Match</button>
                 <button>All Group</button>
-                <button>Blog</button>
+                <button><a href="index.html">Blog</a></button>
             </div>
+            <!-- Fixture Section -->
             <div class="matches">
                 <div class="match">
                     <div class="match-banner">
@@ -115,6 +116,9 @@
             </div>
         </div>
     </section>
+
+    <!-- footer section -->
+
     <footer>
         <div class="footer-info">
             <h1 class="footer-title">Goal</h1>
@@ -129,6 +133,14 @@
                 <li><a href="">Privacy Settings</a></li>
                 <li><a href="">Goal App</a></li>
                 <li><a href="">Goal Live</a></li>
+            </ul>
+        </div>
+        <div class="footer-social">
+            <ul>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
         </div>
     </footer>
