--- a/secondpage.html
+++ b/secondpage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fixture</title>
+    <title>Fixture - Soccer-Score</title>
     <!-- Font Awesome Kit Link -->
     <script src="https://kit.fontawesome.com/898dd78949.js" crossorigin="anonymous"></script>
     <!-- CSS Link -->
@@ -33,6 +33,7 @@
         </div>
     </header>
     <!-- Menu Option & Blog Section -->
+    <!-- Menu Section -->
     <section class="second-part">
         <div class="second-container">
             <div class="menu">
