--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football</title>
+    <title>Soccer-Score</title>
     <!-- Font Awesome Kit Link -->
     <script src="https://kit.fontawesome.com/898dd78949.js" crossorigin="anonymous"></script>
     <!-- CSS Link -->
@@ -33,6 +33,7 @@
         </div>
     </header>
     <!-- Menu Option & Blog Section -->
+    <!-- menu section -->
     <section class="second-part">
         <div class="second-container">
             <div class="menu">
@@ -124,7 +125,7 @@
         </div>
     </section>
 
-    <!-- View All Button -->
+    <!-- View All Button  For Tablet-->
     <div class="view-button">
         <button><a href=""> View All</a></button>
 
